# Ritsu

./: .claudeignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REFACTOR-BLUEPRINT.md  ROADMAP.md  SECURITY.md  SKILL.md  package.json  state-machine.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.ritsu/: ctx-2026-05.jsonl  ctx.db-shm  ctx.db-wal  ecosystem.json  health-snapshots.jsonl  install-cache.json  vectors.db-shm  vectors.db-wal
_shared/: artifact-layers.md  artifact-schema.md  artifact-schema.yaml  artifact-templates.md  ctx-event-schema.json  ctx-protocol.md  domain-resolver.md  flow-schema.yaml  mcp-tools-internal.yaml  mcp-tools.md  mcp-tools.yaml  mcp-tools.yaml.bak  openspec-contract-bridge.md  preferences-schema.yaml  skill-common-steps.md  state-machine.md  state-machine.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  decision-log.md  integrations.md  inventory.md  mcp-claude-desktop.example.json  phase-1-implementation.md  risk-register.md  v2-execution-priority.md  v2-stress-test.md
domains/: _base.md  _base.yaml  backend.md  backend.yaml  data.md  data.yaml  devops.md  devops.yaml  frontend.md  frontend.yaml  fullstack.md  (+2 more)
ritsud/: Cargo.toml
ritsud/src/: cache.rs  exec.rs  main.rs  policy.rs  rpc.rs  sandbox.rs
runtime/core/: Cargo.toml
runtime/core/src/: correlation.rs  ctx_index.rs  event_validator.rs  lib.rs
runtime/native/: Cargo.toml  package.json
runtime/native/src/: ctx_store.rs  lib.rs  vector_store.rs
(+358 files in other folders)
