[package]
name = "ritsu-core"
version = "3.5.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.29", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"     # 最小体积
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
